# maxrand_twostream

./: CMakeLists.txt  Readme.md
libRadVersion/: compile.sh  main_twomaxrnd.c  twomaxrnd.c  twomaxrnd.h
src/: CMakeLists.txt  data_parameters.f90  data_parameters.mod  eddington.f90  gauss.c  gauss.h  helper_functions.f90  m_data_parameters.mod  m_helper_functions.mod  main.f90  nina_maxrand.c  nina_maxrand_wrapper.f90  twostream.f90  twostream_maxrand.f90
